--- a/snippets/package.json
+++ b/snippets/package.json
@@ -11,7 +11,7 @@
       },
       {
         "language": "cpp",
-        "path": "./cpp-templates.json.code-snippets"
+        "path": "./cpp-templates.code-snippets"
       },
       {
         "language": "cpp",
